--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons"); 
 html, body {
   height: 100%;
   background-image: url("assets\bg.jpg");
@@ -8,4 +9,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-toolbar.mat-primary {
   background: #6ad769;
   color: #fff;
+}
+mat-icon {
+  margin-right: 4px;
+  color: #49a148;
 }
