--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -3,109 +3,30 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
+    <span style="margin-left: 5px">Main Page</span>
     <span class="example-spacer"></span>
-    <ul class="pl_authorization">
-      <li>
-        <a href="#" data-bind="click: ProfileClick" class="of_text"><ins><span class="icon profile"></span><!-- ko text: UserInfo-->d.stryzhak<!-- /ko --></ins></a>
-      </li>
-      <li>
-        <a href="javascript:document.getElementById('logoutForm').submit()"><span class="icon logout"></span><ins>Logout</ins></a>
-      </li>
-    </ul>
     <img src="assets\logo.png" width="85" height="30" />
   </mat-toolbar>
 </header>
 <div class="main">
   <div class="container">
-    <div class="card">
-      <mat-card class="example-card">
-        <mat-card-subtitle>Mississauga (Burnhamthorpe) Cardiology</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
+    <div class="pages">
+      <mat-list>
+        <mat-list-item><mat-icon>location_city</mat-icon> Location page</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><mat-icon>collections_bookmark</mat-icon>Teaching Collection page</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><mat-icon>settings</mat-icon>Configuration page</mat-list-item>
+      </mat-list>
     </div>
-    <div class="card">
-      <mat-card class="example-card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="card">
-      <mat-card class="example-card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="card">
-      <mat-card class="example-card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="card">
-      <mat-card class="example-card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="card">
-      <mat-card class="example-card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
+    <div class="features">
+      <mat-list >
+        <mat-list-item><mat-icon>contact_page</mat-icon>Assign Report</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><mat-icon>room_preferences</mat-icon>Add room</mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item><mat-icon>payments</mat-icon>Change Billing</mat-list-item>
+      </mat-list>
     </div>
   </div>
 </div>
