--- a/src/app/location-page/location-page.component.css
+++ b/src/app/location-page/location-page.component.css
@@ -1,22 +1,25 @@
 .main {
-  margin: 5px;
+    margin: 5px;
 }
-
 .container {
   width: 100%;
   max-width: 1024px;
+  padding: 0 15px;
   margin: 0 auto;
 }
-
+.card{
+    display: inline-block;
+    margin: 3px;
+}
 .card {
-  display: inline-block;
-  margin: 3px;
+   max-width: 300px;
 }
-
-.example-card {
-  max-width: 275px;
-}
-
 .example-spacer {
   flex: 1 1 auto;
+}
+.spacer {
+  flex: 1 1 auto;
+}
+mat-label {
+  text-align: center;
 }
