--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,37 +1,51 @@
 <header>
   <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <button mat-icon-button class="example-icon" (click)="drawer.toggle()" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
     <span style="margin-left: 5px">Main Page</span>
-    <span class="example-spacer"></span>
-    <img src="assets\logo.png" width="85" height="30" />
+    <span class="spacer"></span>
+    <img src="assets\logo.png" routerLink="/main" width="85" height="30" />
+    <button mat-icon-button class="logout-button" (click)="logout()" aria-label="Example icon-button with menu icon">
+      <mat-icon>logout</mat-icon>
+    </button>
   </mat-toolbar>
 </header>
-<div class="main">
-  <div class="container">
-    <div class="pages">
-      <mat-list>
-        <mat-list-item><mat-icon>location_city</mat-icon> Location page</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item><mat-icon>collections_bookmark</mat-icon>Teaching Collection page</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item><mat-icon>settings</mat-icon>Configuration page</mat-list-item>
-      </mat-list>
-    </div>
-    <div class="features">
-      <mat-list >
-        <mat-list-item><mat-icon>contact_page</mat-icon>Assign Report</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item><mat-icon>room_preferences</mat-icon>Add room</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item><mat-icon>payments</mat-icon>Change Billing</mat-list-item>
-      </mat-list>
-    </div>
-  </div>
-</div>
-<footer>
-  <div class="container">
+<mat-drawer-container >
+  <mat-drawer #drawer class="sidenav" mode="over">
+    <mat-form-field >
+     <mat-label >Search by prefix</mat-label>
+      <input matInput type="text" [(ngModel)]="searchPrefix" />
+    </mat-form-field>
+      <button mat-button color="primary">Select</button>
+  </mat-drawer>
+  <div class="main">
+    <div class="container">
 
+      <div class="pages">
+        <mat-list>
+          <mat-list-item routerLink="/location-page"><mat-icon>location_city</mat-icon> Location page</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item><mat-icon>collections_bookmark</mat-icon>Teaching Collection page</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item><mat-icon>settings</mat-icon>Configuration page</mat-list-item>
+        </mat-list>
+      </div>
+      <div class="features">
+        <mat-list>
+          <mat-list-item><mat-icon>contact_page</mat-icon>Assign Report</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item><mat-icon>room_preferences</mat-icon>Add room</mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item><mat-icon>payments</mat-icon>Change Billing</mat-list-item>
+        </mat-list>
+      </div>
+    </div>
   </div>
-</footer>
+</mat-drawer-container>
+
+  <footer>
+    <div class="container">
+
+    </div>
+  </footer>
