--- a/src/app/location-page/location-page.component.html
+++ b/src/app/location-page/location-page.component.html
@@ -3,14 +3,14 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <span class="example-spacer"></span>
-    <img src="assets\logo.png" width="85" height="30" />
+    <span class="spacer"></span>
+    <img src="assets\logo.png" routerLink="/main" width="85" height="30" />
   </mat-toolbar>
 </header>
 <div class="main">
   <div class="container">
     <div class="card">
-      <mat-card class="example-card">
+      <mat-card class="card">
         <mat-card-subtitle>Mississauga (Burnhamthorpe) Cardiology</mat-card-subtitle>
         <mat-card-title>Shiba Inu</mat-card-title>
         <mat-card-content>
@@ -25,7 +25,7 @@
       </mat-card>
     </div>
     <div class="card">
-      <mat-card class="example-card">
+      <mat-card class="card">
         <mat-card-subtitle>Location</mat-card-subtitle>
         <mat-card-title>Shiba Inu</mat-card-title>
         <mat-card-content>
@@ -40,7 +40,7 @@
       </mat-card>
     </div>
     <div class="card">
-      <mat-card class="example-card">
+      <mat-card class="card">
         <mat-card-subtitle>Location</mat-card-subtitle>
         <mat-card-title>Shiba Inu</mat-card-title>
         <mat-card-content>
@@ -55,7 +55,7 @@
       </mat-card>
     </div>
     <div class="card">
-      <mat-card class="example-card">
+      <mat-card class="card">
         <mat-card-subtitle>Location</mat-card-subtitle>
         <mat-card-title>Shiba Inu</mat-card-title>
         <mat-card-content>
@@ -70,7 +70,7 @@
       </mat-card>
     </div>
     <div class="card">
-      <mat-card class="example-card">
+      <mat-card class="card">
         <mat-card-subtitle>Location</mat-card-subtitle>
         <mat-card-title>Shiba Inu</mat-card-title>
         <mat-card-content>
@@ -85,7 +85,7 @@
       </mat-card>
     </div>
     <div class="card">
-      <mat-card class="example-card">
+      <mat-card class="card">
         <mat-card-subtitle>Location</mat-card-subtitle>
         <mat-card-title>Shiba Inu</mat-card-title>
         <mat-card-content>
