--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,13 +1,10 @@
-.main {
-    margin: 5px;
-}
 .container {
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
   cursor: pointer;
 }
-.example-spacer {
+.spacer {
   flex: 1 1 auto;
 }
 mat-list {
@@ -15,4 +12,42 @@ mat-list {
 }
 .features {
     margin-top: 10px;
+}
+.sidenav {
+  background-color: #71d76f;
+  width: 185px;
+  height: 120px
+}
+input {
+  width: 100%;
+  height: 30px;
+  text-align: center;
+}
+mat-form-field {
+  margin-top: 0px;
+  background-color: transparent;
+  color: white;
+}
+.mat-drawer-container button {
+  background-color: white;
+  color: #71d76f;
+  border: 3px solid #71d76f;
+  width: 100%;
+}
+.logout-button{
+    margin-left: 20px;
+}
+::ng-deep .mat-focused .mat-form-field-label {
+  /*change color of label*/
+  color: green !important;
+}
+
+::ng-deep.mat-form-field-underline {
+  /*change color of underline*/
+  background-color: white !important;
+}
+
+::ng-deep.mat-form-field-ripple {
+  /*change color of underline when focused*/
+  background-color: white !important;
 }
