--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,8 +1,8 @@
 <mat-card>
   <mat-card-content>
     <form [formGroup]="loginForm" autocomplete="off" novalidate (ngSubmit)="loginUser(loginForm.value)">
-      <img src="assets\logo.png" routerLink="/main" width="170" height="60" />
-      <div *ngIf="showError" class="alert alert-danger" role="alert">
+      <img src="assets\logo.png" width="170" height="60" />
+      <div *ngIf="showError" id = "errorLogin" class="alert alert-danger" role="alert">
         {{errorMessage}}
       </div>
       <mat-form-field>
