--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -51,3 +51,13 @@ mat-form-field {
   /*change color of underline when focused*/
   background-color: white !important;
 }
+.logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.pages {
+  margin-top: 10px;
+}
