--- a/src/app/location-page/location-page.component.html
+++ b/src/app/location-page/location-page.component.html
@@ -1,105 +1,46 @@
 <header>
   <mat-toolbar color="primary">
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
+      <mat-icon routerLink="/main" >arrow_back</mat-icon>
     </button>
     <span class="spacer"></span>
     <img src="assets\logo.png" routerLink="/main" width="85" height="30" />
   </mat-toolbar>
 </header>
+<ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="default" color="#6ad769"  type="line-spin-fade-rotating" [fullScreen]="false"><p style="color: white">   Loading... </p></ngx-spinner>
 <div class="main">
-  <div class="container">
-    <div class="card">
-      <mat-card class="card">
-        <mat-card-subtitle>Mississauga (Burnhamthorpe) Cardiology</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="card">
-      <mat-card class="card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="card">
-      <mat-card class="card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="card">
-      <mat-card class="card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="card">
-      <mat-card class="card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-    <div class="card">
-      <mat-card class="card">
-        <mat-card-subtitle>Location</mat-card-subtitle>
-        <mat-card-title>Shiba Inu</mat-card-title>
-        <mat-card-content>
-          <p>This card has divider and indeterminate progress as footer</p>
-        </mat-card-content>
-        <mat-divider inset></mat-divider>
-        <mat-card-actions>
-          <button mat-button>Edit</button>
-          <button mat-button>Hide</button>
-          <button mat-button>Settings</button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-  </div>
+  <!--<div class="container">
+    <div class="card">-->
+  <!--*ngFor ="let loc of locations"-->
+      <!--<div class="card-border">-->
+        <!--<mat-card class="card">-->
+        <!--<mat-card-subtitle>{{loc.clinicname}}</mat-card-subtitle>-->
+        <!--<mat-card-title style="font-size: 16px; text-align: center">{{loc.name}}</mat-card-title>
+      <mat-card-content>
+        <p style="font-size: 12px">Phone: {{loc.phone}} </p>
+        <p style="font-size: 12px">Fax:   {{loc.fax}} </p>
+        <p style="font-size: 12px">Address:   {{loc.addressLine}} <br /></p>
+      </mat-card-content>
+      <mat-divider inset></mat-divider>
+      <mat-card-actions>
+        <button mat-button routerLink="/location-details-page">Edit</button>
+        <button mat-button>Hide</button>
+        <button mat-button>Settings</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>-->
+  <table mat-table [dataSource]="locations" class="mat-elevation-z8 demo-table">
+    <!-- Name Column -->
+    <ng-container matColumnDef="demo-name">
+      <th mat-header-cell *matHeaderCellDef > Locations </th>
+      <td mat-cell class="table-row-value" align="center" *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+      <!--</div>-->
+  <!--</div>-->
 </div>
 <footer>
   <div class="container">
