--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -1,17 +1,22 @@
 .container {
   width: 100%;
-  max-width: 500px;
+  max-width: 800px;
   margin: 0 auto;
   cursor: pointer;
 }
-.spacer {
-  flex: 1 1 auto;
+.pages {
+  margin-top: 10px;
+}
+
+.features {
+  margin-top: 10px;
 }
 mat-list {
   background-color: white;
 }
-.features {
-    margin-top: 10px;
+
+.spacer {
+  flex: 1 1 auto;
 }
 .sidenav {
   background-color: #71d76f;
@@ -28,7 +33,7 @@ mat-form-field {
   background-color: transparent;
   color: white;
 }
-.mat-drawer-container button {
+.button-sidebar  {
   background-color: white;
   color: #71d76f;
   border: 3px solid #71d76f;
@@ -56,8 +61,5 @@ mat-form-field {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
-  margin-top: 10px;
-}
-.pages {
   margin-top: 10px;
 }
