search form styling and preloader boost

--- a/src/app/location-details-page/location-details-page.component.html
+++ b/src/app/location-details-page/location-details-page.component.html
@@ -1,7 +1,7 @@
 <header>
   <mat-toolbar color="primary">
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon routerLink="/main">arrow_back</mat-icon>
+      <mat-icon routerLink="/location-page">arrow_back</mat-icon>
     </button>
     <span class="spacer"></span>
     <img src="assets\logo.png" routerLink="/main" width="85" height="30" />
