--- a/src/app/location-page/location-page.component.css
+++ b/src/app/location-page/location-page.component.css
@@ -3,9 +3,12 @@
 }
 .container {
   width: 100%;
-  max-width: 1300px;
+  max-width: 1240px;
   padding: 0 15px;
   margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: space-between;
 }
 .card {
   max-width: 300px;
@@ -41,12 +44,16 @@ mat-card-content p {
     margin: 0;
 }
 
+.location_data {
+  margin: 0 20px;
+}
+
 
 
 
 
 th.mat-header-cell{
-    text-align: center !important;
+    text-align: center;
 }
 
 td:hover {
@@ -56,7 +63,7 @@ td:hover {
 }
 
 .demo-table {
-  width: 100%;
+  width: 30%;
 }
 
 .mat-column-demo-name {
