--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -20,9 +20,13 @@ mat-list {
 }
 .sidenav {
   background-color: #71d76f;
-  width: 185px;
-  height: 120px
+  width: 200px;
+  height: 140px;
+  padding: 10px;
+  overflow: hidden;
+  margin: 10px;
 }
+
 input {
   width: 100%;
   height: 30px;
@@ -41,6 +45,13 @@ mat-form-field {
 }
 .logout-button{
     margin-left: 20px;
+}
+
+::ng-deep.matInput {
+  width: 100%;
+}
+::ng-deep #search_input {
+  width: 100%;
 }
 ::ng-deep .mat-focused .mat-form-field-label {
   /*change color of label*/
