--- a/src/app/location-page/location-page.component.css
+++ b/src/app/location-page/location-page.component.css
@@ -9,6 +9,7 @@
   display: flex;
   flex-direction: row;
   align-items: space-between;
+  justify-content: flex-start;
 }
 .card {
   max-width: 300px;
@@ -46,7 +47,18 @@ mat-card-content p {
 
 .location_data {
   margin: 0 20px;
-  background: #fff;
+  background: rgba(255, 255, 255, .5);
+  flex: 1;
+  position: sticky;
+  top: 20px;
+  height: 450px;
+  width: 100%;
+  padding: 10px;
+}
+
+.clinic_data_item {
+  font-size: 1.4em;
+  line-height: 2em;
 }
 
 
