--- a/src/app/location-page/location-page.component.html
+++ b/src/app/location-page/location-page.component.html
@@ -13,8 +13,7 @@
 </ngx-spinner>
 <div class="main">
   <div class="container">
-    <div>
-      <!-- <div class="card-border">
+    <!-- <div class="card-border">
         <mat-card class="card">
           <mat-card-subtitle>{{loc.clinicname}}</mat-card-subtitle>
           <mat-card-title style="font-size: 16px; text-align: center">{{loc.name}}</mat-card-title>
@@ -31,20 +30,38 @@
           </mat-card-actions>
         </mat-card>
       </div> -->
-    </div>
-      <table mat-table [dataSource]="locations" class="mat-elevation-z8 demo-table">
-        <!-- Name Column -->
-        <ng-container matColumnDef="demo-name">
-          <th mat-header-cell *matHeaderCellDef> Locations </th>
-          <td mat-cell class="table-row-value" align="center" *matCellDef="let element" (click)="getClinicData(element)"> {{element.name}} </td>
-        </ng-container>
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    <div class="location_data">
-      <h1>Clinic Name:</h1>
-      <div>{{currentClinic!.name}}</div>
-      <div>{{currentClinic!.phone}}</div>
+    <table mat-table [dataSource]="locations" class="mat-elevation-z8 demo-table">
+      <!-- Name Column -->
+      <ng-container matColumnDef="demo-name">
+        <th mat-header-cell *matHeaderCellDef> Locations </th>
+        <td mat-cell class="table-row-value" align="center" *matCellDef="let element" (click)="getClinicData(element)">
+          {{element.name}} </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+      <div class="location_data">
+        <h1>Clinic Data:</h1>
+        <div class="clinic_data_item">
+          <span>Clinic Name: </span>
+          <span>{{currentClinic.name}}</span>
+        </div>
+        <div class="clinic_data_item">
+          <span>Clinic Address: </span>
+          <span>{{currentClinic.addressLine}}</span>
+        </div>
+        <div class="clinic_data_item">
+          <span>Clinic Phone: </span>
+          <span>{{currentClinic.phone}}</span>
+        </div>
+        <div class="clinic_data_item">
+          <span>Clinic Fax: </span>
+          <span>{{currentClinic.fax}}</span>
+        </div>
+        <div class="clinic_data_item">
+          <span>Clinic TimeZone: </span>
+          <span>{{currentClinic.timeZone}}</span>
+        </div>
     </div>
   </div>
 </div>
