--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -68,9 +68,7 @@ mat-form-field {
   background-color: white !important;
 }
 .logo {
+  width: 10%;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 10px;
-  margin-top: 10px;
+  margin: 10px auto;
 }
