upd for login page

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -7,7 +7,7 @@
       </div>
       <mat-form-field>
         <input matInput placeholder="Username" formControlName="username" name="username" required>
-        <mat-label>username@corp.velox.me</mat-label>
+        <mat-label>Username@corp.velox.me</mat-label>
         <mat-error>
           Please provide a valid username (like username@corp.velox.me)
         </mat-error>
